# mcom02-delcore30m-tools

./: .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  README.rst  crt0-detector.s  crt0-sum.s  delcore30m-cpudetector.c  delcore30m-dspdetector.c  delcore30m-fibonacci.c  delcore30m-inversiondemo.c  delcore30m-inversiontest.c  delcore30m-inversiontest.h  delcore30m-paralleltest.c  delcore30m-test.py  detector.c  drmdisplay.c  drmdisplay.h  dspdetector.c  dspdetector.h  dspinverse.c  dspinverse.h  fibonacci.s  inverse-demo.s  inversiontest-profile.s  inversiontest.s  stbfont.c  stbfont.h  sum.c  test_merge.txt  tox.ini  zuul.yaml
stb/: stb_truetype.h
